--- a/raon-control/bab.html
+++ b/raon-control/bab.html
@@ -314,7 +314,6 @@
   <div id="body-container">
     <div style="width:800px; height:800px; position: relative;">
       <div class="container"><img id="nuclear" src="images/bab/nuclear.svg"></div>
-      <!-- <div class="container"><img id="circle1" src="../images/bab/circle1.svg"></div> -->
       <div class="container">
         <svg id="circle2" width="800" height="800">
           <defs>
@@ -327,103 +326,105 @@
               }
             </style>
           </defs>
-          <path class="cls-2 circle2-d" d="M372.64,324.82a80.06,80.06,0,0,1,54.72,0" />
-          <path class="cls-2 circle2-d" d="M324.82,427.36a80.06,80.06,0,0,1,0-54.72" />
-          <path class="cls-2 circle2-d" d="M427.36,475.18a80.06,80.06,0,0,1-54.72,0" />
-          <path class="cls-2 circle2-d" d="M475.18,372.64a80.06,80.06,0,0,1,0,54.72" />
+          <path class="cls-2 circle2-d" d="M372.64,324.82a80.06,80.06,0,0,1,54.72,0" style="fill:none;stroke:#07789e;stroke-width: 10px;"/>
+          <path class="cls-2 circle2-d" d="M324.82,427.36a80.06,80.06,0,0,1,0-54.72" style="fill:none;stroke:#05526d;stroke-width: 10px;" />
+          <path class="cls-2 circle2-d" d="M427.36,475.18a80.06,80.06,0,0,1-54.72,0" style="fill:none;stroke:#07789e;stroke-width: 10px;" />
+          <path class="cls-2 circle2-d" d="M475.18,372.64a80.06,80.06,0,0,1,0,54.72" style="fill:none;stroke:#05526d;stroke-width: 10px;" />
         </svg>
       </div>
 
-      <div class="container"><img id="circle3" src="images/bab/circle3.svg"></div>
+      <div id="circle3" class="container"><img src="images/bab/circle3.svg"></div>
 
-      <div class="container"><img id="circle4-1" src="images/bab/circle4-1.svg"></div>
-      <div class="container"><img id="circle4-2" src="images/bab/circle4-2.svg"></div>
-      <div class="container"><img id="circle4-3" src="images/bab/circle4-3.svg"></div>
+      <div class="container circle4"><img id="circle4-1" src="images/bab/circle4-1.svg"></div>
+      <div class="container circle4"><img id="circle4-2" src="images/bab/circle4-2.svg"></div>
+      <div class="container circle4"><img id="circle4-3" src="images/bab/circle4-3.svg"></div>
 
-      <div class="container">
-        <svg id="circle5" width="800" height="800">
+      <div id="circle5" class="container">
+        <svg class="circle5" width="800" height="800">
           <circle cx="400" cy="400" r="150"
             style="fill: none;stroke: #2ca8e0;stroke-miterlimit: 10;stroke-dasharray: 1.01 9.12 1.01 9.12 1.01 9.12;" />
         </svg>
       </div>
-      <div class="container"><img id="circle6" src="images/bab/circle6.svg"></div>
-      <div class="container"><img id="circle8-1" src="images/bab/circle8-1.svg"></div>
-      <div class="container"><img id="circle8-2" src="images/bab/circle8-2.svg"></div>
-      <div class="container"><img id="circle8-3" src="images/bab/circle8-3.svg"></div>
 
-      <div class="container" id="wheel">
-        <!-- 12 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.1s; position: absolute;">
-          <path class="wheel-even"
+      <div class="container">
+        <svg width="800" height="800" style="--delay: 1.0s;">
+          <path class="circle6" style="--delay:0.5s; fill:#29a9e1"
+            d="M683.5081,298.9438l.087.0555c-1.8867-5.2378-3.9865-10.4152-6.18-15.5607-1.1127-2.6353-2.2072-5.28-3.3937-7.8756l-.0363.0164c-.0917-.1991-.2024-.39-.2948-.5892l-26.1717-13.608c3.19,5.9942,6.5505,12.8235,10.8119,21.5416l.0452.029c11.7425,28.4764,14.0071,33.5582,21.389,69.6636L700,374.671A300.5075,300.5075,0,0,0,683.5081,298.9438Z" />
+          <path class="circle6" style="--delay:0.4s; fill:#07789e"
+            d="M614.2236,189.039l.1024.0136c-3.9276-3.9512-8.0227-7.7577-12.19-11.4956-2.1242-1.9191-4.2361-3.8547-6.41-5.7062l-.026.03c-.1674-.1418-.3487-.2684-.5166-.41l-29.4812-1.2927c5.4288,4.0871,11.3662,8.8588,18.92,14.9625l.0531.0071c22.6992,20.8549,26.9033,24.5054,48.88,54.1139l27.6775,11.4521A301.0359,301.0359,0,0,0,614.2236,189.039Z" />
+          <path class="circle6" style="--delay:0.3s; fill:#05526d"
+            d="M504.8974,118.6585l.0985-.0309c-5.2325-1.9241-10.5556-3.6465-15.9147-5.2764-2.7377-.8432-5.4713-1.7066-8.2256-2.4675l-.0107.0383c-.2118-.0578-.43-.0961-.6418-.1533l-27.2663,11.2648c6.6506,1.4141,14.0521,3.2341,23.482,5.5795l.0512-.0159c29.4023,9.3255,34.7581,10.86,67.2123,28.424l29.933-1.2964A301.7244,301.7244,0,0,0,504.8974,118.6585Z" />
+          <path class="circle6" style="--delay:0.2s; fill:#023241"
+            d="M376.0154,100.9906l.0762-.07c-5.5569.4635-11.1106,1.1479-16.6577,1.9314-2.8381.3907-5.6812.7614-8.5,1.2336l.0065.0393c-.2164.0369-.43.0942-.6465.1317l-19.9422,21.7115c6.6262-1.5239,14.1048-2.9967,23.6442-4.8489l.04-.036c30.5959-3.9514,36.1-4.82,72.95-2.5921l26.58-13.802A302.0778,302.0778,0,0,0,376.0154,100.9906Z" />
+          <path class="circle6" style="--delay:0.1s; fill:#0c222b"
+            d="M251.7281,139.3459l.04-.0952c-4.84,2.7642-9.5836,5.7273-14.2792,8.7773-2.4069,1.5513-4.8266,3.0866-7.181,4.7036l.0225.0328c-.1805.1248-.35.2668-.53.3921l-8.8812,28.09c5.36-4.1764,11.5145-8.6659,19.376-14.3688l.0207-.0494c26.0563-16.4878,30.6769-19.5963,65.0173-33.1224l18.2456-23.7213A301.8442,301.8442,0,0,0,251.7281,139.3459Z" />
+          <path class="circle6" style="--delay:0.5s; fill:#29a9e1"
+            d="M109.8191,475.9853l-.0818-.0629c1.4222,5.382,3.0619,10.7224,4.7981,16.0391.8783,2.7221,1.7377,5.4524,2.6931,8.1409l.0376-.0132c.074.2063.1676.4065.2422.6127l24.8839,15.833c-2.6542-6.2489-5.4058-13.3446-8.89-22.4l-.0425-.0327c-9.2113-29.39-11.0236-34.6492-15.2249-71.2594l-18.2328-23.731A300.4591,300.4591,0,0,0,109.8191,475.9853Z" />
+          <path class="circle6" style="--delay:0.4s; fill:#07789e"
+            d="M169.2435,591.4993l-.1008-.0224c3.5676,4.2777,7.3148,8.4261,11.1395,12.5122,1.9485,2.0966,3.8833,4.2086,5.8875,6.2422l.0285-.0279c.1544.1558.324.2977.479.4531l29.256,3.8525c-5.0512-4.5438-10.5494-9.8139-17.5411-16.5514l-.0523-.0118c-20.7918-22.75-24.6611-26.7525-43.9693-58.16l-26.5722-13.8163A300.9031,300.9031,0,0,0,169.2435,591.4993Z" />
+          <path class="circle6" style="--delay:0.3s; fill:#05526d"
+            d="M272.0084,671.1229l-.1009.0221c5.0446,2.372,10.1971,4.551,15.3935,6.6409,2.6536,1.0782,5.3014,2.1761,7.9788,3.1737l.014-.0372c.2059.076.42.1331.6259.2085l28.1462-8.85c-6.5018-1.9873-13.7162-4.4443-22.9055-7.6012l-.0524.0114c-28.4761-11.8478-33.6775-13.8429-64.4746-34.163l-29.9323-1.3125A301.6014,301.6014,0,0,0,272.0084,671.1229Z" />
+          <path class="circle6" style="--delay:0.2s; fill:#023241"
+            d="M398.8573,699.9357l-.082.0627c5.5762.0217,11.1685-.177,16.7629-.4749,2.8614-.1423,5.726-.2642,8.575-.49l-.0031-.04c.2188-.0179.4367-.0564.6556-.075l21.7621-19.8939c-6.7341.9416-14.3128,1.7582-23.9777,2.7735l-.0427.0324c-30.8244,1.2746-36.3832,1.6607-72.8983-3.7641l-27.6836,11.4372A302.05,302.05,0,0,0,398.8573,699.9357Z" />
+          <path class="circle6" style="--delay:0.1s; fill:#0c222b"
+            d="M526.0206,672.5389l-.0477.0913c5.0629-2.3326,10.0471-4.8717,14.9912-7.5017,2.5332-1.336,5.0777-2.6549,7.5644-4.0609l-.02-.0347c.1907-.1086.3719-.2353.5624-.3445l11.3-27.21c-5.7044,3.6941-12.2273,7.6312-20.5568,12.6285l-.0249.0474c-27.3968,14.1582-32.2713,16.853-67.6621,27.34L451.88,695.5379A301.9372,301.9372,0,0,0,526.0206,672.5389Z" />
+        </svg>
+      </div>
+
+      <div class="container circle8"><img id="circle8-1" src="images/bab/circle8-1.svg"></div>
+      <div class="container circle8"><img id="circle8-2" src="images/bab/circle8-2.svg"></div>
+      <div class="container circle8"><img id="circle8-3" src="images/bab/circle8-3.svg"></div>
+
+      <div id="wheel" class="container">
+        <svg width="800" height="800">
+          <!-- 12 -->
+          <path class="wheel-even" style="--delay: 0.2s;"
             d="M443.13,239.05l21.56-80.48a248.49,248.49,0,0,0-129.29,0L357,239.05A165.81,165.81,0,0,1,443.13,239.05Z" />
-        </svg>
 
-        <!-- 1 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.15s; position: absolute;">
-          <path class="wheel-odd"
+          <!-- 1 -->
+          <path class="wheel-odd" style="--delay: 0.25s;"
             d="M517.82,282.18l58.92-58.92a248.62,248.62,0,0,0-112-64.68l-21.56,80.49A167.4,167.4,0,0,1,517.82,282.18Z" />
-        </svg>
 
-        <!-- 2 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.2s; position: absolute;">
-          <path class="wheel-even"
+          <!-- 2 -->
+          <path class="wheel-even" style="--delay: 0.3s;"
             d="M560.93,356.88l80.5-21.57a248.6,248.6,0,0,0-64.62-112l-58.92,58.92A165.81,165.81,0,0,1,560.93,356.88Z" />
-        </svg>
 
-        <!-- 3 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.25s; position: absolute;">
-          <path class="wheel-odd"
+          <!-- 3 -->
+          <path class="wheel-odd" style="--delay: 0.35s;"
             d="M561,443.13l80.48,21.56a248.49,248.49,0,0,0,0-129.29L561,357A165.81,165.81,0,0,1,561,443.13Z" />
-        </svg>
 
-        <!-- 4 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.3s; position: absolute;">
-          <path class="wheel-even"
+          <!-- 4 -->
+          <path class="wheel-even" style="--delay: 0.4s;"
             d="M517.82,517.82l58.92,58.92a248.62,248.62,0,0,0,64.68-112l-80.49-21.56A167.4,167.4,0,0,1,517.82,517.82Z" />
-        </svg>
 
-        <!-- 5 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.35s; position: absolute;">
-          <path class="wheel-odd"
+          <!-- 5 -->
+          <path class="wheel-odd" style="--delay: 0.45s;"
             d="M443.12,560.93l21.57,80.5a248.6,248.6,0,0,0,112-64.62l-58.92-58.92A165.81,165.81,0,0,1,443.12,560.93Z" />
-        </svg>
 
-        <!-- 6 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.4s; position: absolute;">
-          <path class="wheel-even"
+          <!-- 6 -->
+          <path class="wheel-even" style="--delay: 0.5s;"
             d="M356.87,561l-21.56,80.48a248.49,248.49,0,0,0,129.29,0L443,561A165.81,165.81,0,0,1,356.87,561Z" />
-        </svg>
 
-        <!-- 7 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.45s; position: absolute;">
-          <path class="wheel-odd"
+          <!-- 7 -->
+          <path class="wheel-odd" style="--delay: 0.55s;"
             d="M282.18,517.82l-58.92,58.92a248.62,248.62,0,0,0,112,64.68l21.56-80.49A167.4,167.4,0,0,1,282.18,517.82Z" />
-        </svg>
 
-        <!-- 8 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.5s; position: absolute;">
-          <path class="wheel-even"
+          <!-- 8 -->
+          <path class="wheel-even" style="--delay: 0.6s;"
             d="M239.07,443.12l-80.5,21.57a248.6,248.6,0,0,0,64.62,112l58.92-58.92A165.81,165.81,0,0,1,239.07,443.12Z" />
-        </svg>
 
-        <!-- 9 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.55s; position: absolute;">
-          <path class="wheel-odd"
+          <!-- 9 -->
+          <path class="wheel-odd" style="--delay: 0.65s;"
             d="M239.05,356.87l-80.48-21.56a248.49,248.49,0,0,0,0,129.29L239.05,443A165.81,165.81,0,0,1,239.05,356.87Z" />
-        </svg>
 
-        <!-- 10 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.6s; position: absolute;">
-          <path class="wheel-even"
+          <!-- 10 -->
+          <path class="wheel-even" style="--delay: 0.7s;"
             d="M282.18,282.18l-58.92-58.92a248.62,248.62,0,0,0-64.68,112l80.49,21.56A167.4,167.4,0,0,1,282.18,282.18Z" />
-        </svg>
 
-        <!-- 11 -->
-        <svg class="wheelSVG" width="800" height="800" style="--delay: 0.65s; position: absolute;">
-          <path class="wheel-odd"
+          <!-- 11 -->
+          <path class="wheel-odd" style="--delay: 0.75s;"
             d="M356.88,239.07l-21.57-80.5a248.6,248.6,0,0,0-112,64.62l58.92,58.92A165.81,165.81,0,0,1,356.88,239.07Z" />
         </svg>
-
       </div>
 
       <div class="container" id="menu"></div>
@@ -739,50 +740,3 @@
 </script>
 
 </html>
-
-<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="800" height="800" viewBox="0 0 800 800">
-  <defs>
-    <style>
-      .cls-1 {
-        fill: #29a9e1;
-      }
-
-      .cls-2 {
-        fill: #07789e;
-      }
-
-      .cls-3 {
-        fill: #05526d;
-      }
-
-      .cls-4 {
-        fill: #023241;
-      }
-
-      .cls-5 {
-        fill: #0c222b;
-      }
-    </style>
-  </defs>
-  <title>circle6</title>
-  <path class="cls-1" style="fill:#29a9e1"
-    d="M683.5081,298.9438l.087.0555c-1.8867-5.2378-3.9865-10.4152-6.18-15.5607-1.1127-2.6353-2.2072-5.28-3.3937-7.8756l-.0363.0164c-.0917-.1991-.2024-.39-.2948-.5892l-26.1717-13.608c3.19,5.9942,6.5505,12.8235,10.8119,21.5416l.0452.029c11.7425,28.4764,14.0071,33.5582,21.389,69.6636L700,374.671A300.5075,300.5075,0,0,0,683.5081,298.9438Z" />
-  <path class="cls-2" style="fill:#07789e"
-    d="M614.2236,189.039l.1024.0136c-3.9276-3.9512-8.0227-7.7577-12.19-11.4956-2.1242-1.9191-4.2361-3.8547-6.41-5.7062l-.026.03c-.1674-.1418-.3487-.2684-.5166-.41l-29.4812-1.2927c5.4288,4.0871,11.3662,8.8588,18.92,14.9625l.0531.0071c22.6992,20.8549,26.9033,24.5054,48.88,54.1139l27.6775,11.4521A301.0359,301.0359,0,0,0,614.2236,189.039Z" />
-  <path class="cls-3" style="fill:#05526d"
-    d="M504.8974,118.6585l.0985-.0309c-5.2325-1.9241-10.5556-3.6465-15.9147-5.2764-2.7377-.8432-5.4713-1.7066-8.2256-2.4675l-.0107.0383c-.2118-.0578-.43-.0961-.6418-.1533l-27.2663,11.2648c6.6506,1.4141,14.0521,3.2341,23.482,5.5795l.0512-.0159c29.4023,9.3255,34.7581,10.86,67.2123,28.424l29.933-1.2964A301.7244,301.7244,0,0,0,504.8974,118.6585Z" />
-  <path class="cls-4" style="fill:#023241"
-    d="M376.0154,100.9906l.0762-.07c-5.5569.4635-11.1106,1.1479-16.6577,1.9314-2.8381.3907-5.6812.7614-8.5,1.2336l.0065.0393c-.2164.0369-.43.0942-.6465.1317l-19.9422,21.7115c6.6262-1.5239,14.1048-2.9967,23.6442-4.8489l.04-.036c30.5959-3.9514,36.1-4.82,72.95-2.5921l26.58-13.802A302.0778,302.0778,0,0,0,376.0154,100.9906Z" />
-  <path class="cls-5" style="fill:#0c222b"
-    d="M251.7281,139.3459l.04-.0952c-4.84,2.7642-9.5836,5.7273-14.2792,8.7773-2.4069,1.5513-4.8266,3.0866-7.181,4.7036l.0225.0328c-.1805.1248-.35.2668-.53.3921l-8.8812,28.09c5.36-4.1764,11.5145-8.6659,19.376-14.3688l.0207-.0494c26.0563-16.4878,30.6769-19.5963,65.0173-33.1224l18.2456-23.7213A301.8442,301.8442,0,0,0,251.7281,139.3459Z" />
-  <path class="cls-1" style="fill:#29a9e1"
-    d="M109.8191,475.9853l-.0818-.0629c1.4222,5.382,3.0619,10.7224,4.7981,16.0391.8783,2.7221,1.7377,5.4524,2.6931,8.1409l.0376-.0132c.074.2063.1676.4065.2422.6127l24.8839,15.833c-2.6542-6.2489-5.4058-13.3446-8.89-22.4l-.0425-.0327c-9.2113-29.39-11.0236-34.6492-15.2249-71.2594l-18.2328-23.731A300.4591,300.4591,0,0,0,109.8191,475.9853Z" />
-  <path class="cls-2" style="fill:#07789e"
-    d="M169.2435,591.4993l-.1008-.0224c3.5676,4.2777,7.3148,8.4261,11.1395,12.5122,1.9485,2.0966,3.8833,4.2086,5.8875,6.2422l.0285-.0279c.1544.1558.324.2977.479.4531l29.256,3.8525c-5.0512-4.5438-10.5494-9.8139-17.5411-16.5514l-.0523-.0118c-20.7918-22.75-24.6611-26.7525-43.9693-58.16l-26.5722-13.8163A300.9031,300.9031,0,0,0,169.2435,591.4993Z" />
-  <path class="cls-3" style="fill:#05526d"
-    d="M272.0084,671.1229l-.1009.0221c5.0446,2.372,10.1971,4.551,15.3935,6.6409,2.6536,1.0782,5.3014,2.1761,7.9788,3.1737l.014-.0372c.2059.076.42.1331.6259.2085l28.1462-8.85c-6.5018-1.9873-13.7162-4.4443-22.9055-7.6012l-.0524.0114c-28.4761-11.8478-33.6775-13.8429-64.4746-34.163l-29.9323-1.3125A301.6014,301.6014,0,0,0,272.0084,671.1229Z" />
-  <path class="cls-4" style="fill:#023241"
-    d="M398.8573,699.9357l-.082.0627c5.5762.0217,11.1685-.177,16.7629-.4749,2.8614-.1423,5.726-.2642,8.575-.49l-.0031-.04c.2188-.0179.4367-.0564.6556-.075l21.7621-19.8939c-6.7341.9416-14.3128,1.7582-23.9777,2.7735l-.0427.0324c-30.8244,1.2746-36.3832,1.6607-72.8983-3.7641l-27.6836,11.4372A302.05,302.05,0,0,0,398.8573,699.9357Z" />
-  <path class="cls-5" style="fill:#0c222b"
-    d="M526.0206,672.5389l-.0477.0913c5.0629-2.3326,10.0471-4.8717,14.9912-7.5017,2.5332-1.336,5.0777-2.6549,7.5644-4.0609l-.02-.0347c.1907-.1086.3719-.2353.5624-.3445l11.3-27.21c-5.7044,3.6941-12.2273,7.6312-20.5568,12.6285l-.0249.0474c-27.3968,14.1582-32.2713,16.853-67.6621,27.34L451.88,695.5379A301.9372,301.9372,0,0,0,526.0206,672.5389Z" />
-</svg>
