fixed main link

--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -392,7 +392,7 @@
                         </div>
                         <div class="doughnutChartText">14GB</div>
                         <div class="doughnut-contain" style="left:50px; top:10px">
-                            <svg style="fill:none">
+                            <svg width="110" height="110" style="fill:none;">
                                 <circle class="doughnutBackground" cx="50" cy="50" r="50" />
                                 <circle class="doughnutForeground" cx="50" cy="50" r="50" stroke="#00ace6"
                                     style="--chartValue:200" />
@@ -406,7 +406,7 @@
                         </div>
                         <div class="doughnutChartText">219</div>
                         <div class="doughnut-contain" style="left:50px; top:10px">
-                            <svg style="fill:none">
+                            <svg width="110" height="110" style="fill:none">
                                 <circle class="doughnutBackground" cx="50" cy="50" r="50" />
                                 <circle class="doughnutForeground" cx="50" cy="50" r="50" stroke="#00e639"
                                     style="--chartValue:400" />
@@ -420,7 +420,7 @@
                         </div>
                         <div class="doughnutChartText">300</div>
                         <div class="doughnut-contain" style="left:50px; top:10px">
-                            <svg style="fill:none">
+                            <svg width="110" height="110" style="fill:none">
                                 <circle class="doughnutBackground" cx="50" cy="50" r="50" />
                                 <circle class="doughnutForeground" cx="50" cy="50" r="50" stroke="#e60000"
                                     style="--chartValue:250" />
