--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -420,6 +420,11 @@
 </body>
 
 <script>
+    // Control Server
+    // var serverAddr = 'http://192.168.68.14'
+	// var scheduleAddr = serverAddr + ':9011/schedule/'
+
+    // scwook Server
     var serverAddr = 'http://localhost'
 	var scheduleAddr = serverAddr + ':8081/schedule/'
 
